# fastAPI_boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: eccf08891721_first_migration.py
app/: main.py
app/api/: deps.py
app/api/endpoints/: items.py  users.py
app/api/schemas/: item.py  user.py
app/core/: config.py  security.py
app/db/: base.py  setup.py
app/db/cruds/: crud_item.py  crud_user.py
app/db/models/: item.py  user.py
app/services/messaging/: email.py
app/tests/: setup.py  test_users.py
requirements/: reqs.txt
